external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_filter_invariant_return_exp1.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 276
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/verification/spec_only_do_filter_invariant_return_exp1.move:9:13
  │
9 │             invariant!(something);
  │             ^^^^^^^^^ Unbound function 'invariant' in current scope

error[E03009]: unbound variable
  ┌─ tests/move_2024/verification/spec_only_do_filter_invariant_return_exp1.move:9:24
  │
9 │             invariant!(something);
  │                        ^^^^^^^^^ Unbound variable 'something'
